<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFoodFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/add_your_food_Txt"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/foodTypeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_food_type_Txt"/>

        <EditText
            android:id="@+id/foodNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_food_name_Txt"/>

        <EditText
            android:id="@+id/foodPriceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_food_price_Txt"/>

        <EditText
            android:id="@+id/foodIvUrlEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_image_with_url_Txt"/>

        <Button
            android:id="@+id/addFoodBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_food_Txt"/>

    </LinearLayout>

</FrameLayout>