<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:elevation="12dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/foodIv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pizza1"/>

        </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/foodTypeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pizza_Txt"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/foodNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/pizza2_Txt"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/foodPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/price_Of_Food"
                    android:textColor="@color/blue_gradient"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/addToBasketCv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/blue_gradient"
            app:cardCornerRadius="12dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center|end">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/shop"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</LinearLayout>